# sound_board

./: .gitmodules  Cargo.toml
resources/: app_state.json
src/: app.rs  app_ui.rs  global_hotkey.rs  lib.rs  main.rs
ui/: main.slint
ui/component/: volume_bar.slint
ui/widget/: slider.slint  volume.slint
