[package]
name = "winittray"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
winit = "0.29.3"
slint = {version = "=1.3.0", path = "slint/api/rs/slint", default-features = false, features = ["compat-1-2", "std"]}
i-slint-backend-winit = { version = "=1.3.0", path = "slint/internal/backends/winit", default-features = false, features = ["renderer-femtovg"]}
windows-sys = {version = "0.52.0", features = [
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
]}
cpal = "0.15.2"
image = "0.24.7"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
tray-icon = "0.10.0"
wav = "1.0.0"

[build-dependencies]
slint-build = { path = "slint/api/rs/build" }
